adjust index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/wx.css">
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/angular.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?id=12"></script>
 </head>
 <body class="ng-scope ng-isolate-scope loaded" ng-controller="chatCtrl">
 <div class="main">
