--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>微信网页版</title>
-    <link rel="stylesheet" href="css/wx.css">
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/wx.css">
+  <style>
+    #mainBox{position:relative; overflow:hidden;}
+    #content{ position:absolute; left:0; top:0;}
+    .scrollDiv{ width:8px; position:absolute; top:0; background:#666; border-radius:10px;}
+  </style>
 </head>
 <body class="ng-scope ng-isolate-scope loaded" ng-controller="chatCtrl">
 <div class="main">
@@ -16,11 +21,11 @@
             <!--个人信息-->
             <div class="header">
                 <div class="avatar">
-                    <img class="img" src="imgs/head_img.png">
+                    <img class="img" ng-src="{{personalImage}}">
                 </div>
                 <div class="info">
                     <h3 class="nickname">
-                        <span class="display_name ng-binding">阳子</span>
+                        <span class="display_name ng-binding">{{PersonalName}}</span>
                         <a class="opt" href="javascript:;">
                             <i class="web_wechat_add"></i>
                         </a>
@@ -30,13 +35,13 @@
             <!--搜索-->
             <div class="search_bar" id="search_bar">
                 <i class="web_wechat_search"></i>
-                <input class="frm_search ng-isolate-scope ng-pristine ng-valid" type="text" placeholder="搜索">
+                <input ng-model="searchKey" ng-change="searchName(searchKey)" class="frm_search ng-isolate-scope ng-pristine ng-valid" type="text" placeholder="搜索">
             </div>
             <!--导航条-->
             <div class="tab">
                 <!--聊天-->
                 <div class="tab_item">
-                    <a class="chat" title="聊天" href="#">
+                    <a class="chat" ui-sref="chat" title="聊天" href="#">
                         <i class="web_wechat_tab_chat web_wechat_tab_chat_hl"}></i>
                     </a>
                 </div>
@@ -55,19 +60,19 @@
             </div>
             <div ui-view="navView" id="navView" class="ng-scope"></div>
 <!-------------------------------导航条结束---------------------------->
+          <!--最近联系人-->
             <div class="nav_view ng-scope"  style="visibility: visible; width: auto;">
                 <!--BEGIN chat list-->
                 <div class="scroll-wrapper chat_list scrollbar-dynamic" style="position: relative;">
-                    <div jquery-scrollbar="" class="chat_list scrollbar-dynamic scroll-content scroll-scrolly_visible" id="J_NavChatScrollBody" data-username="" style="margin-bottom: 0px; margin-right: 0px; height: 458px;">
+                    <div jquery-scrollbar="" class="chat_list scrollbar-dynamic scroll-content scroll-scrolly_visible" id="mainBox" data-username="" style="margin-bottom: 0px; margin-right: 0px; height: 100%;">
 
-                    <div class="ng-scope">
-                        <div class="top-placeholder ng-scope" style="height: 0px;"></div>
+                    <div class="ng-scope" id="content" style="width: 100%;">
                         <!-- end ngRepeat: chatContact in chatList track by chatContact.UserName -->
-                        <div class="  ng-scope" ng-repeat="item in arrList" ng-click="goChat(item.UserName,item.RemarkName!==''?item.RemarkName:item.NickName)">
+                        <div class=" ng-scope" ng-repeat="item in arrList" ng-click="goChat(item.UserName,item.RemarkName!==''?item.RemarkName:item.NickName)" >
                         <!-- ngIf: !chatContact.isShieldUser() -->
                             <div class="chat_item slide-left ng-scope" ng-class="{'active' : item.RemarkName == currentUserName || item.NickName == currentUserName}">
                                 <div class="avatar">
-                                    <img class="img" src="imgs/head_img.png" alt="">
+                                    <img class="img" ng-src="{{item.HeadImgUrl}}" alt="">
                                 </div>
                                 <div class="info">
                                     <h3 class="nickname">
@@ -78,46 +83,6 @@
                         </div><!-- end ngRepeat: chatContact in chatList track by chatContact.UserName -->
                     </div>
                 </div>
-                    <div class="scroll-element scroll-x scroll-scrolly_visible">
-                        <div class="scroll-element_corner"></div>
-                        <div class="scroll-arrow scroll-arrow_less"></div>
-                        <div class="scroll-arrow scroll-arrow_more"></div>
-                        <div class="scroll-element_outer">
-                            <div class="scroll-element_size"></div>
-                            <div class="scroll-element_inner-wrapper">
-                                <div class="scroll-element_inner scroll-element_track">
-                                    <div class="scroll-element_inner-bottom"></div>
-                                </div>
-                            </div>
-                            <div class="scroll-bar" style="width: 89px;">
-                            <div class="scroll-bar_body">
-                                <div class="scroll-bar_body-inner"></div>
-                            </div>
-                                <div class="scroll-bar_bottom"></div>
-                                <div class="scroll-bar_center"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="scroll-element scroll-y scroll-scrolly_visible">
-                        <div class="scroll-element_corner"></div>
-                        <div class="scroll-arrow scroll-arrow_less"></div>
-                        <div class="scroll-arrow scroll-arrow_more"></div>
-                        <div class="scroll-element_outer">
-                            <div class="scroll-element_size"></div>
-                            <div class="scroll-element_inner-wrapper">
-                                <div class="scroll-element_inner scroll-element_track">
-                                    <div class="scroll-element_inner-bottom"></div>
-                                </div>
-                            </div>
-                            <div class="scroll-bar" style="height: 191px; top: 0px;">
-                            <div class="scroll-bar_body">
-                                <div class="scroll-bar_body-inner"></div>
-                            </div>
-                                <div class="scroll-bar_bottom"></div>
-                                <div class="scroll-bar_center"></div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <!--END chat list-->
             </div>
@@ -263,6 +228,176 @@
     <audio id="voiceMsgPlayer" class="voicePlayer"></audio>
     <audio id="msgNoticePlayer" class="voicePlayer"></audio>
 </div>
-
+<script type="text/javascript">
+  window.onload=function(){
+    var doc=document;
+    var _wheelData=-1;
+    var mainBox=doc.getElementById('mainBox');
+    function bind(obj,type,handler){
+      var node=typeof obj=="string"?$(obj):obj;
+      if(node.addEventListener){
+        node.addEventListener(type,handler,false);
+      }else if(node.attachEvent){
+        node.attachEvent('on'+type,handler);
+      }else{
+        node['on'+type]=handler;
+      }
+    }
+    function mouseWheel(obj,handler){
+      var node=typeof obj=="string"?$(obj):obj;
+      bind(node,'mousewheel',function(event){
+        var data=-getWheelData(event);
+        handler(data);
+        if(document.all){
+          window.event.returnValue=false;
+        }else{
+          event.preventDefault();
+        }
+      });
+      //火狐
+      bind(node,'DOMMouseScroll',function(event){
+        var data=getWheelData(event);
+        handler(data);
+        event.preventDefault();
+      });
+      function getWheelData(event){
+        var e=event||window.event;
+        return e.wheelDelta?e.wheelDelta:e.detail*40;
+      }
+    }
+    function addScroll(){
+      this.init.apply(this,arguments);
+    }
+    addScroll.prototype={
+      init:function(mainBox,content,className){
+        var mainBox=doc.getElementById(mainBox);
+        var content=doc.getElementById(content);
+        var scrollDiv=this._createScroll(mainBox,className);
+        this._resizeScorll(scrollDiv,mainBox,content);
+        this._tragScroll(scrollDiv,mainBox,content);
+        this._wheelChange(scrollDiv,mainBox,content);
+        this._clickScroll(scrollDiv,mainBox,content);
+      },
+      //创建滚动条
+      _createScroll:function(mainBox,className){
+        var _scrollBox=doc.createElement('div')
+        var _scroll=doc.createElement('div');
+        var span=doc.createElement('span');
+        _scrollBox.appendChild(_scroll);
+        _scroll.appendChild(span);
+        _scroll.className=className;
+        mainBox.appendChild(_scrollBox);
+        return _scroll;
+      },
+      //调整滚动条
+      _resizeScorll:function(element,mainBox,content){
+//          var p=element.parentNode;
+//          var conHeight=content.offsetHeight;
+//          console.log(conHeight)
+//          var _width=mainBox.clientWidth;
+//          var _height=mainBox.clientHeight;
+//          var _scrollWidth=element.offsetWidth;
+//          var _left=_width-_scrollWidth;
+//          p.style.width=_scrollWidth+"px";
+//          p.style.height=_height+"px";
+//          p.style.left=_left+"px";
+//          p.style.position="absolute";
+//          p.style.background="#ccc";
+//          content.style.width=(mainBox.offsetWidth-_scrollWidth)+"px";
+//          var _scrollHeight=parseInt(_height*(_height/conHeight));
+//          console.log(_scrollHeight)
+//          if(_scrollHeight>=mainBox.clientHeight){
+//            element.parentNode.style.display="none";
+//          }
+//          element.style.height=_scrollHeight+"px";
+      },
+      //拖动滚动条
+      _tragScroll:function(element,mainBox,content){
+        var mainHeight=mainBox.clientHeight;
+        element.onmousedown=function(event){
+          var _this=this;
+          var _scrollTop=element.offsetTop;
+          var e=event||window.event;
+          var top=e.clientY;
+          //this.onmousemove=scrollGo;
+          document.onmousemove=scrollGo;
+          document.onmouseup=function(event){
+            this.onmousemove=null;
+          }
+          function scrollGo(event){
+            var e=event||window.event;
+            var _top=e.clientY;
+            var _t=_top-top+_scrollTop;
+            if(_t>(mainHeight-element.offsetHeight)){
+              _t=mainHeight-element.offsetHeight;
+            }
+            if(_t<=0){
+              _t=0;
+            }
+            element.style.top=_t+"px";
+            content.style.top=-_t*(content.offsetHeight/mainBox.offsetHeight)+"px";
+            _wheelData=_t;
+          }
+        }
+        element.onmouseover=function(){
+          this.style.background="#444";
+        }
+        element.onmouseout=function(){
+          this.style.background="#666";
+        }
+      },
+      //鼠标滚轮滚动，滚动条滚动
+      _wheelChange:function(element,mainBox,content){
+        var node=typeof mainBox=="string"?$(mainBox):mainBox;
+        var flag=0,rate=0,wheelFlag=0;
+        if(node){
+          mouseWheel(node,function(data){
+            wheelFlag+=data;
+            if(_wheelData>=0){
+              flag=_wheelData;
+              element.style.top=flag+"px";
+              wheelFlag=_wheelData*12;
+              _wheelData=-1;
+            }else{
+              flag=wheelFlag/12;
+            }
+            if(flag<=0){
+              flag=0;
+              wheelFlag=0;
+            }
+            if(flag>=(mainBox.offsetHeight-element.offsetHeight)){
+              flag=(mainBox.clientHeight-element.offsetHeight);
+              wheelFlag=(mainBox.clientHeight-element.offsetHeight)*12;
+            }
+            element.style.top=flag+"px";
+            content.style.top=-flag*(content.offsetHeight/mainBox.offsetHeight)+"px";
+          });
+        }
+      },
+      _clickScroll:function(element,mainBox,content){
+        var p=element.parentNode;
+        p.onclick=function(event){
+          var e=event||window.event;
+          var t=e.target||e.srcElement;
+          var sTop=document.documentElement.scrollTop>0?document.documentElement.scrollTop:document.body.scrollTop;
+          var top=mainBox.offsetTop;
+          var _top=e.clientY+sTop-top-element.offsetHeight/2;
+          if(_top<=0){
+            _top=0;
+          }
+          if(_top>=(mainBox.clientHeight-element.offsetHeight)){
+            _top=mainBox.clientHeight-element.offsetHeight;
+          }
+          if(t!=element){
+            element.style.top=_top+"px";
+            content.style.top=-_top*(content.offsetHeight/mainBox.offsetHeight)+"px";
+            _wheelData=_top;
+          }
+        }
+      }
+    }
+    new addScroll('mainBox','content','scrollDiv');
+  }
+</script>
 </body>
 </html>
