--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>微信网页版</title>
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/angular.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?time=New Date()"></script>
     <link rel="stylesheet" href="css/wx.css">
   <style>
     #mainBox{position:relative; overflow:hidden;}
