adjust remark name"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
           <div id="chatRoomMembersWrap"></div>
               <div class="title_wrap">
                   <div class="title poi">
-                        <a class="title_name ng-binding">{{nickname}}</a>
+                        <a class="title_name ng-binding">{{rnickname}}</a>
                   </div>
               </div>
        </div>
